<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <PreferenceCategory>
        <EditTextPreference
            android:key="@string/pref_location_key"
            android:title="@string/pref_location_label"
            android:defaultValue="@string/pref_location_default"
            android:selectAllOnFocus="true"
            android:inputType="textCapWords"
            android:capitalize="words"
            android:singleLine="true"
            android:maxLines="1" />
    </PreferenceCategory>

    <PreferenceCategory>
        <ListPreference
            android:key="@string/pref_temp_key"
            android:title="@string/pref_temp_label"
            android:defaultValue="@string/pref_temp_default"
            android:entries="@array/listArray"
            android:entryValues="@array/listValues"
        />
    </PreferenceCategory>

</PreferenceScreen>

